otheryamls/statusapiLBService.yml
apiVersion: v1
kind: Service
metadata:
  name: statusapi-svc-lb
spec:
  selector:
    app: statusapi
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
