otheryamls/userapiLBService.yml
apiVersion: v1
kind: Service
metadata:
  name: userapi-svc-lb
spec:
  selector:
    app: userapi
  ports:
    - port: 80
      targetPort: 5000
  type: LoadBalancer
